# gxfp5130-linux

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  UPSTREAMS.md
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility_report.md
crates/sil6250/: Cargo.toml  README.md
crates/sil6250/src/: engine.rs  lib.rs  matcher.rs  proto.rs  sift.rs  transport.rs
dbus/: io.github.uunicorn.Fprint.conf
docs/: debugging.md  provisioning.md  tested-host.md
gxfp-backup/: README.md
gxfp-reprovision/: README.md
openfprintd-backend/: Cargo.toml
openfprintd-backend/src/: device.rs  engine.rs  main.rs  storage.rs
patches/: gxfpmoc-mbedtls-and-capture-once.patch
scripts/: fetch-upstreams.sh  gxfp-ensure-device  gxfp.dkms.conf  install.sh
systemd/: gxfp-openfprintd.service
