[package]
name = "gxfp-openfprintd"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "gxfp-openfprintd"
path = "src/main.rs"

[dependencies]
sil6250 = { path = "../crates/sil6250" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
